--- a/pom.xml
+++ b/pom.xml
@@ -133,22 +133,6 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.7</version>
     </dependency>
-    <!-- jackson转换json用 @ResponseBody默认调用jackson，将java对象转为json -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-      <version>2.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.5.4</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>2.5.4</version>
-    </dependency>
       <!-- swagger2 -->
       <dependency>
           <groupId>io.springfox</groupId>
@@ -305,5 +289,15 @@
         <!--</plugin>-->
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
